--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -56,8 +56,14 @@
       </div>
     </div>
     <div class="col-sm-2" style="text-align: center; ">
-      <div class="circle" style="font-weight: bold;margin-left: 1em;">
-        <span style="padding-left: 8%;font-size: 12px">Over all Grade</span>
+      <div class="circle" style="font-weight: bold;
+      /* margin-left: 1em; */
+      font-size: 15px;
+      width: auto;
+      height: 90%;
+      margin-top: -32px;
+      padding-top: 20px;">Over all Grade {{grade}}
+        <!-- <span style="padding-left: 8%;font-size: 12px"></span> -->
       </div>
       <br />
       <!-- <button type="button" class="btn btn-primary" style="background-color: #33099e; color: white;font-weight: bold;"
