--- a/src/app/staticdata/staticdata.component.html
+++ b/src/app/staticdata/staticdata.component.html
@@ -96,180 +96,152 @@
 
 
       <div *ngIf="showTechconnect">
-        <div class="accordion" id="accordionExample" style="margin: 0em; ">
+        <div class="container-fluid">
           <div class="row">
-            <p class="text-center" *ngIf="getMyTechConnctData.length==0">No Data Available</p>
-          </div>
-          <div class="card" *ngFor="let techteach of getMyTechConnctData">
-            <div class="card-header" id="teachheading{{1}}" data-toggle="" attr.data-target="#teachcollapse{{i}}"
-              aria-expanded="" attr.aria-controls="teachcollapse{{i}}">
-              <h5 class="mb-0">
-                <button *ngIf="i!=0" class="btn btn-link collapsed" type="button">
-                  Tech Teach
-                </button>
-                <button *ngIf="i==0" class="btn btn-link" type="button">
-                  Tech Teach
-                </button>
-              </h5>
-            </div>
+            <div class="col-12" style="margin-top: 1em;">
 
-            <div id="teachcollapse{{i}}" [ngClass]="{'show' : i==0}" class="" attr.aria-labelledby="teachheading{{i}}"
-              data-parent="#accordionExample">
-              <div class="card-body teach-bdy">
-                <div class="col-12">
+              <div class="card card-articles tchtlk-card" style="width: 100%;"
+                *ngFor="let techteach of getMyTechConnctData ; let i = index; ">
 
-                  <span class="cardSubHeading crd-hdng">Tech Connect Details</span>
-                  <div><b class="crd-lft">Type</b> <span class="crd-ryt">: {{techteach.tech_teach_type}}</span></div>
-                  <div><b class="crd-lft">Topic</b> <span class="crd-ryt">: {{techteach.topic}}</span></div>
-                  <div><b class="crd-lft">Abstract</b> <span class="crd-ryt">: {{techteach.abstract}}</span></div>
-                  <div><b class="crd-lft">Technology</b> <span class="crd-ryt">: {{techteach.technology}}</span></div>
-                  <div *ngIf="techteach.sub_technology!=null"><b class="crd-lft">Sub Technology</b> <span
-                      class="crd-ryt">: {{techteach.sub_technology}}</span>
-                    <br />
+
+                <div class="card-header">
+                  <h6 class="tech-hdng">Tech Teach</h6>
+                </div>
+
+                <div class="card-body">
+                  <div class="row">
+
+
+                    <div class="col-md-3">
+                      <span class="cardSubHeading crd-hdng">Tech Connect Details</span>
+                      <div><b class="crd-lft">Type</b> <span class="crd-ryt">: {{techteach.tech_teach_type}}</span>
+                      </div>
+                      <div><b class="crd-lft">Topic</b> <span class="crd-ryt">: {{techteach.topic}}</span></div>
+                      <div><b class="crd-lft">Abstract</b> <span class="crd-ryt">: {{techteach.abstract}}</span></div>
+                      <div><b class="crd-lft">Technology</b> <span class="crd-ryt">: {{techteach.technology}}</span>
+                      </div>
+                      <div *ngIf="techteach.sub_technology!=null"><b class="crd-lft">Sub Technology</b> <span
+                          class="crd-ryt">:
+                          {{techteach.sub_technology}}</span>
+                      </div>
+                    </div>
+
+                    <div class="col-md-3">
+                      <span class="cardSubHeading crd-hdng">Industrial Expert</span>
+                      <div><b class="crd-lft">Name</b> <a [routerLink]="['/myprofile',techteach.user_id]"
+                          style="color: black"><span class="crd-ryt">: {{techteach.user_name}}</span></a></div>
+                      <div><b class="crd-lft">Company</b> <span class="crd-ryt">:
+                          {{techteach.company}}</span></div>
+                      <div><b class="crd-lft">Positionl</b> <span class="crd-ryt" style="font-size: 14px;">:
+                          {{techteach.position}}</span></div>
+                    </div>
+
+                    <div class="col-md-3">
+                      <span class="cardSubHeading crd-hdng">Venue Details</span>
+                      <div><b class="crd-lft">Place</b> <span class="crd-ryt">: {{techteach.place}}</span></div>
+                      <div><b class="crd-lft">Address</b> <span class="crd-ryt">: {{techteach.address}}</span>
+                      </div>
+                      <div><b class="crd-lft" style="font-size: 13px;">City</b> <span class="crd-ryt">:
+                          {{techteach.city}}</span></div>
+                      <div><b class="crd-lft">Date</b> <span class="crd-ryt">: {{techteach.event_date}}</span></div>
+                    </div>
+
+                    <div class="col-md-3">
+                      <span class="cardSubHeading crd-hdng">Registration Details</span>
+
+                      <div><b class="crd-lft">No. of Registration</b> <span class="crd-ryt">:
+                          {{techteach.seat_capacity}}</span>
+                      </div>
+
+                      <ul class="nav nav-pills crd-btn-dv">
+                        <li class="nav-item">
+                          <button class="nav-link btn btn-light buttonarticle"
+                            (click)="viewTechTeachDetailss(techteach)" data-toggle="modal"
+                            data-target="#detailsModal">More Detail's</button>
+                        </li>
+
+                      </ul>
+
+                    </div>
+
                   </div>
-                  <!-- <div><b class="crd-lft">Created on</b> <span class="crd-ryt">: {{techteach.createdon}}</span></div>
-        <div><b class="crd-lft">Event on</b> <span class="crd-ryt">: {{techteach.venuedate}}</span></div>
-        <div><b class="crd-lft" style="font-size: 14px;">No.of People Applied</b> <span class="crd-ryt"> :
-            {{techteach.registrationCount}}</span></div> -->
-
-
-                  <span class="cardSubHeading crd-hdng">Industrial Expert</span>
-                  <div><b class="crd-lft">Name</b> <span class="crd-ryt">: {{techteach.user_name}}</span></div>
-                  <div><b class="crd-lft">Company</b> <span class="crd-ryt">:
-                      {{techteach.company}}</span></div>
-                  <div><b class="crd-lft">Positionl</b> <span class="crd-ryt" style="font-size: 14px;">:
-                      {{techteach.position}}</span></div>
-                  <br />
-
-                  <span class="cardSubHeading crd-hdng">Venue Details</span>
-                  <div><b class="crd-lft">Place</b> <span class="crd-ryt">: {{techteach.place}}</span></div>
-                  <div><b class="crd-lft">Address</b> <span class="crd-ryt">: {{techteach.address}}</span>
-                  </div>
-                  <div><b class="crd-lft" style="font-size: 13px;">City</b> <span class="crd-ryt">:
-                      {{techteach.city}}</span></div>
-                  <div><b class="crd-lft">Date</b> <span class="crd-ryt">: {{techteach.event_date}}</span></div>
-
-                  <br />
-
-                  <span class="cardSubHeading crd-hdng">Registration Details</span>
-
-                  <div><b class="crd-lft">No. of Registration</b> <span class="crd-ryt">:
-                      {{techteach.seat_capacity}}</span>
-                  </div>
-
-
                 </div>
               </div>
 
-              <div class="crd-footr">
-                <ul class="nav nav-pills crd-btn-dv">
-                  <li class="nav-item">
-                    <button class="nav-link btn btn-light  buttonarticle" (click)="viewTechTeachDetailss(techteach)"
-                      data-toggle="modal" data-target="#detailsModal">View
-                      Detail's</button>
-                  </li>
 
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!--tech teach end-->
+              <div class="card card-articles tchtlk-card" style="width: 100%;"
+                *ngFor="let techtalkdata of getMyTechTalktData ; let i = index; ">
 
-          <div class="tech-tlk-contnr">
-            <div class="card" *ngFor="let techtalkdata of getMyTechTalktData | filter:techEventFilter; let i = index; ">
-              <div class="card-header" id="talkheading{{1}}" data-toggle="" attr.data-target="#talkcollapse{{i}}"
-                aria-expanded="false" attr.aria-controls="talkcollapse{{i}}">
-                <h5 class="mb-0">
-                  <button *ngIf="i!=0 || (i==0 && techteachdetails?.length!=0)" class="btn btn-link collapsed"
-                    type="button">
-                    Tech Talk
-                  </button>
-                  <button *ngIf="i==0 && techteachdetails?.length==0" class="btn btn-link" type="button">
-                    Tech Talk
-                  </button>
-                </h5>
-              </div>
 
-              <div id="talkcollapse{{i}}" [ngClass]="{'show' : i==0 && techteachdetails?.length==0}" class=""
-                attr.aria-labelledby="talkheading{{i}}" data-parent="#accordionExample">
-                <div class="card-body talk-bdy">
-                  <div class="col-12">
-                    <span class="cardSubHeading crd-hdng">Tech Connect Details</span>
-                    <div><b class="crd-lft">Type</b> <span class="crd-ryt">: {{techtalkdata.tech_talk_type}}</span>
-                    </div>
-                    <div><b class="crd-lft">Topic</b> <span class="crd-ryt">: {{techtalkdata.topic}}</span></div>
-                    <div><b class="crd-lft">Abstract</b> <span class="crd-ryt">: {{techtalkdata.abstract}}</span></div>
-                    <div><b class="crd-lft">Technology</b> <span class="crd-ryt">: {{techtalkdata.technology}}</span>
-                    </div>
-                    <div *ngIf="techtalkdata.sub_technology!=null"><b class="crd-lft">Sub Technology</b> <span
-                        class="crd-ryt">:
-                        {{techtalkdata.sub_technology}}</span>
-                      <br />
+                <div class="card-header">
+                  <h6 class="tech-hdng">Tech Talk</h6>
+                </div>
+
+                <div class="card-body">
+                  <div class="row">
+
+                    <div class="col-md-3">
+                      <span class="cardSubHeading crd-hdng">Tech Connect Details</span>
+                      <div><b class="crd-lft">Type</b> <span class="crd-ryt">: {{techtalkdata.tech_talk_type}}</span>
+                      </div>
+                      <div><b class="crd-lft">Topic</b> <span class="crd-ryt">: {{techtalkdata.topic}}</span></div>
+                      <div><b class="crd-lft">Abstract</b> <span class="crd-ryt">: {{techtalkdata.abstract}}</span>
+                      </div>
+                      <div><b class="crd-lft">Technology</b> <span class="crd-ryt">: {{techtalkdata.technology}}</span>
+                      </div>
+                      <div *ngIf="techtalkdata.sub_technology!=null"><b class="crd-lft">Sub Technology</b> <span
+                          class="crd-ryt">:
+                          {{techtalkdata.sub_technology}}</span>
+                      </div>
                     </div>
 
-                    <!-- <div><b class="crd-lft">Created on</b> <span class="crd-ryt">: {{techtalkdata.createdon}}</span></div>
-              <div><b class="crd-lft">Event on</b> <span class="crd-ryt">: {{techtalkdata.venuedate}}</span></div>
-              <div><b class="crd-lft" style="font-size: 14px;">No.of People Applied</b> <span class="crd-ryt"> :
-                  {{techtalkdata.registrationCount}}</span></div> -->
-
-
-                    <span class="cardSubHeading crd-hdng">Industrial Expert</span>
-
-                    <div><b class="crd-lft">Name</b> <span class="crd-ryt">: {{techtalkdata.user_name}}</span></div>
-                    <div><b class="crd-lft">Company</b> <span class="crd-ryt">:
-                        {{techtalkdata.company}}</span></div>
-                    <div><b class="crd-lft">Positionl</b> <span class="crd-ryt" style="font-size: 14px;">:
-                        {{techtalkdata.position}}</span></div>
-
-
-
-                    <div><b class="crd-lft">Name</b> <span class="crd-ryt">: {{techtalkdata.user_name}}</span></div>
-                    <div><b class="crd-lft">Contact Number</b> <span class="crd-ryt">: {{techtalkdata.contact_email}}
-                      </span></div>
-                    <div><b class="crd-lft">Email</b> <span class="crd-ryt" style="font-size: 14px;">:
-                        {{techtalkdata.contact_number}}
-                      </span></div>
-
-                    <br />
-
-                    <span class="cardSubHeading crd-hdng">Venue Details</span>
-                    <br />
-                    <div><b class="crd-lft">Place</b> <span class="crd-ryt">: {{techtalkdata.place}}</span></div>
-                    <div><b class="crd-lft">Address</b> <span class="crd-ryt">: {{techtalkdata.address}}</span></div>
-                    <div><b class="crd-lft">City</b> <span class="crd-ryt">: {{techtalkdata.city}}</span></div>
-                    <div><b class="crd-lft">Venue Date</b> <span class="crd-ryt">: {{techtalkdata.event_date}}</span>
+                    <div class="col-md-3">
+                      <span class="cardSubHeading crd-hdng">Industrial Expert</span>
+                      <div><b class="crd-lft">Name</b> <span class="crd-ryt">: {{techtalkdata.user_name}}</span></div>
+                      <div><b class="crd-lft">Company</b> <span class="crd-ryt">:
+                          {{techtalkdata.company}}</span></div>
+                      <div><b class="crd-lft">Position</b> <span class="crd-ryt" style="font-size: 14px;">:
+                          {{techtalkdata.position}}</span></div>
+                      <div><b class="crd-lft">Email</b> <span class="crd-ryt" style="font-size: 14px;">:
+                          {{techtalkdata.contact_email}}</span></div>
+                      <div><b class="crd-lft">Contact</b> <span class="crd-ryt"
+                          style="font-size: 14px;">:{{techtalkdata.contact_number}}</span></div>
                     </div>
 
-
-
-                    <span class="cardSubHeading crd-hdng">Registration Details</span>
-
-                    <div><b class="crd-lft">No. of Registration</b> <span class="crd-ryt">:
-                        {{techtalkdata.seat_capacity}}</span>
+                    <div class="col-md-3">
+                      <span class="cardSubHeading crd-hdng">Venue Details</span>
+                      <div><b class="crd-lft">Place</b> <span class="crd-ryt">: {{techtalkdata.place}}</span></div>
+                      <div><b class="crd-lft">Address</b> <span class="crd-ryt">: {{techtalkdata.address}}</span>
+                      </div>
+                      <div><b class="crd-lft">City</b> <span class="crd-ryt">:
+                          {{techtalkdata.city}}</span></div>
+                      <div><b class="crd-lft">Date</b> <span class="crd-ryt">: {{techtalkdata.event_date}}</span></div>
                     </div>
 
+                    <div class="col-md-3">
+                      <span class="cardSubHeading crd-hdng">Registration Details</span>
+
+                      <div><b class="crd-lft">No. of Registration</b> <span class="crd-ryt">:
+                          {{techtalkdata.seat_capacity}}</span>
+                      </div>
+                      <ul class="nav nav-pills crd-btn-dv">
+                        <li class="nav-item">
+                          <button class="nav-link btn btn-light  buttonarticle"
+                            (click)="viewTechTalkDetails(techtalkdata)" data-toggle="modal"
+                            data-target="#detailsModal">More Detail's</button>
+                        </li>
+
+                      </ul>
+
+                    </div>
 
                   </div>
                 </div>
-
-                <div class="crd-footr">
-                  <ul class="nav nav-pills crd-btn-dv">
-                    <li class="nav-item">
-                      <button class="nav-link btn btn-light  buttonarticle" (click)="viewTechTalkDetails(techtalkdata)"
-                        data-toggle="modal" data-target="#detailsModal">View Detail's</button>
-                    </li>
-                    <!-- <li class="nav-item" *ngIf="!checkLoginStatus()"> -->
-                    <li class="nav-item">
-                      <button class="nav-link btn btn-light buttonarticle"
-                        (click)="applyForEventTechTalk(techtalkdata)">Apply for the event</button>
-                    </li>
-                  </ul>
-                </div>
               </div>
+
+
             </div>
           </div>
-
-
         </div>
       </div>
 
@@ -311,19 +283,20 @@
 
                       <span *ngIf="stuvation.idea!==''"><b>Idea</b> : {{stuvation?.idea}}
                         <br /></span>
-                      <span *ngIf="stuvation.idea_desc!==''"> <b>Idea Description</b> : {{stuvation?.idea_desc}}</span>
+                      <span *ngIf="stuvation.idea_desc!==''"> <b>Idea Description</b> :
+                        {{stuvation?.idea_desc}}</span>
 
                     </div>
                     <div>
 
                       <span *ngIf="stuvation.prototype_available!==''"><b>Prototype Available </b> :
-                        {{stuation?.prototype_available}} <br /></span>
+                        {{stuvation?.prototype_available}} <br /></span>
 
-                      <span *ngIf="stuvation.ref_link!=''"><b>Reference Link</b> : {{stuation?.ref_link}}
+                      <span *ngIf="stuvation.ref_link!=''"><b>Reference Link</b> : {{stuvation?.ref_link}}
                         <br /></span>
-                      <span *ngIf="stuvation.exp_budget!=''"> <b>Expected Budget</b> : {{stuation?.exp_budget}}
+                      <span *ngIf="stuvation.exp_budget!=''"> <b>Expected Budget</b> : {{stuvation?.exp_budget}}
                         <br /></span>
-                      <span *ngIf="stuvation.team_size!='0'"><b>Team Size</b> : {{stuation?.team_size}}<br />
+                      <span *ngIf="stuvation.team_size!='0'"><b>Team Size</b> : {{stuvation?.team_size}}<br />
                         <b>Student Partner Last Date Of Joining</b> : {{stuvation?.last_date_of_joining}}
                         <br /></span>
                       <div *ngIf="stuvation?.idea_desc=='Innovation' && stuvation.idea_desc!=''">
