--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -582,10 +582,10 @@
                             <label for="lookingMentorship">Looking Mentorship from Industrial Experts :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingMentorship" formControlName="lookingMentorship" selected
-                                value="Y">&nbsp;
+                                value="Yes">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingMentorship" formControlName="lookingMentorship"
-                                value="N">&nbsp;
+                                value="No">&nbsp;
                             No
                         </div>
 
@@ -604,10 +604,10 @@
                             <label for="lookingStudentPartner">Looking Student partner :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingStudentPartner" formControlName="lookingStudentPartner"
-                                selected value="Y">&nbsp;
+                                selected value="Yes">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingStudentPartner" formControlName="lookingStudentPartner"
-                                value="N">&nbsp;
+                                value="No">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6">
@@ -625,10 +625,10 @@
                             <label for="lookingSponsorship">Looking sponsorship :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingSponsorship" formControlName="lookingSponsorship" selected
-                                value="Y">&nbsp;
+                                value="Yes">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingSponsorship" formControlName="lookingSponsorship"
-                                value="N">&nbsp;
+                                value="No">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6">
@@ -1051,10 +1051,10 @@
                             <label for="lookingMentorship">Looking Mentorship from Industrial Experts :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingMentorship" formControlName="lookingMentorship" selected
-                                value="Y">&nbsp;
+                                value="Yes">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingMentorship" formControlName="lookingMentorship"
-                                value="N">&nbsp;
+                                value="No">&nbsp;
                             No
                         </div>
 
@@ -1073,10 +1073,10 @@
                             <label for="lookingStudentPartner">Looking Student partner :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingStudentPartner" formControlName="lookingStudentPartner"
-                                selected value="Y">&nbsp;
+                                selected value="Yes">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingStudentPartner" formControlName="lookingStudentPartner"
-                                value="N">&nbsp;
+                                value="No">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6">
@@ -1094,10 +1094,10 @@
                             <label for="lookingSponsorship">Looking sponsorship :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingSponsorship" formControlName="lookingSponsorship" selected
-                                value="Y">&nbsp;
+                                value="Yes">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingSponsorship" formControlName="lookingSponsorship"
-                                value="N">&nbsp;
+                                value="No">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6">
@@ -1241,13 +1241,13 @@
                             <div class="form-group col-4">
 
                                 <label for="technology"><span class="red">*</span>From Time:
-                                    <input type="text" class="form-control" formControlName="fromTime">
+                                    <input myNumberOnly type="text" class="form-control" formControlName="fromTime">
                                 </label>
                             </div>
                             <div class="form-group col-4">
 
                                 <label for="technology"><span class="red">*</span>To Time:
-                                    <input type="text" class="form-control" formControlName="toTime">
+                                    <input myNumberOnly type="text" class="form-control" formControlName="toTime">
                                 </label>
                             </div>
                         </div>
@@ -1423,13 +1423,13 @@
                             <div class="form-group col-4">
                                 <label>
                                     <span class="red">*</span> From Time:
-                                    <input type="text" class="form-control" formControlName="fromTime">
+                                    <input myNumberOnly type="text" class="form-control" formControlName="fromTime">
                                 </label>
                             </div>
                             <div class="form-group col-4">
                                 <label>
                                     <span class="red">*</span> To Time:
-                                    <input type="text" class="form-control" formControlName="toTime">
+                                    <input myNumberOnly type="text" class="form-control" formControlName="toTime">
                                 </label>
                             </div>
                         </div>
@@ -1645,13 +1645,13 @@
                             <div class="form-group col-4">
 
                                 <label for="technology"><span class="red">*</span>From Time:
-                                    <input type="text" class="form-control" formControlName="fromTime">
+                                    <input myNumberOnly type="text" class="form-control" formControlName="fromTime">
                                 </label>
                             </div>
                             <div class="form-group col-4">
 
                                 <label for="technology"><span class="red">*</span>To Time:
-                                    <input type="text" class="form-control" formControlName="toTime">
+                                    <input myNumberOnly type="text" class="form-control" formControlName="toTime">
                                 </label>
                             </div>
                         </div>
@@ -1794,7 +1794,7 @@
                             <button (click)="openMe2()" type="button" data-toggle="modal" class="buttonarticle"> Create
                                 Academic Proz</button>
                             <button (click)="openMe3()" type="button" data-toggle="modal" class="buttonarticle">
-                                Vreate Innovation Proz</button>
+                                Create Innovation Proz</button>
                         </span>
                     </div>
                     <div class="col-md-3">
@@ -1932,10 +1932,10 @@
                             <label for="lookingMentorship">Looking Mentorship from Industrial Experts :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingMentorship" formControlName="lookingMentorship" selected
-                                value="Y">&nbsp;
+                                value="Yes">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingMentorship" formControlName="lookingMentorship"
-                                value="N">&nbsp;
+                                value="No">&nbsp;
                             No
                         </div>
 
@@ -1954,10 +1954,10 @@
                             <label for="lookingStudentPartner">Looking Student partner :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingStudentPartner" formControlName="lookingStudentPartner"
-                                selected value="Y">&nbsp;
+                                selected value="Yes">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingStudentPartner" formControlName="lookingStudentPartner"
-                                value="N">&nbsp;
+                                value="No">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6">
@@ -1975,10 +1975,10 @@
                             <label for="lookingSponsorship">Looking sponsorship :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingSponsorship" formControlName="lookingSponsorship" selected
-                                value="Y">&nbsp;
+                                value="Yes">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingSponsorship" formControlName="lookingSponsorship"
-                                value="N">&nbsp;
+                                value="No">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6">
@@ -2112,10 +2112,10 @@
                             <label for="lookingMentorship">Looking Mentorship from Industrial Experts :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingMentorship" formControlName="lookingMentorship" selected
-                                value="Y">&nbsp;
+                                value="Yes">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingMentorship" formControlName="lookingMentorship"
-                                value="N">&nbsp;
+                                value="No">&nbsp;
                             No
                         </div>
 
@@ -2134,10 +2134,10 @@
                             <label for="lookingStudentPartner">Looking Student partner :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingStudentPartner" formControlName="lookingStudentPartner"
-                                selected value="Y">&nbsp;
+                                selected value="Yes">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingStudentPartner" formControlName="lookingStudentPartner"
-                                value="N">&nbsp;
+                                value="No">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6">
@@ -2155,10 +2155,10 @@
                             <label for="lookingSponsorship">Looking sponsorship :</label>
                             &nbsp;&nbsp;
                             <input type="radio" name="lookingSponsorship" formControlName="lookingSponsorship" selected
-                                value="Y">&nbsp;
+                                value="Yes">&nbsp;
                             Yes&nbsp;&nbsp;
                             <input type="radio" name="lookingSponsorship" formControlName="lookingSponsorship"
-                                value="N">&nbsp;
+                                value="No">&nbsp;
                             No
                         </div>
                         <div class="form-group col-6">
@@ -2272,13 +2272,13 @@
                             <div class="form-group col-4">
                                 <label>
                                     <span class="red">*</span> From Time:
-                                    <input type="text" class="form-control" formControlName="fromTime">
+                                    <input myNumberOnly type="text" class="form-control" formControlName="fromTime">
                                 </label>
                             </div>
                             <div class="form-group col-4">
                                 <label>
                                     <span class="red">*</span> To Time:
-                                    <input type="text" class="form-control" formControlName="toTime">
+                                    <input myNumberOnly type="text" class="form-control" formControlName="toTime">
                                 </label>
                             </div>
                         </div>
