--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -87,32 +87,34 @@
         <br />
         <div class="form-group">
           <label for="firstname">Name:</label>
-          <input type="text" class="form-control" formControlName="name">
+          <input type="text" class="form-control" formControlName="name" [attr.disabled]="editButton==false?'':null">
         </div>
         <div class="form-group">
           <label for="email">Email:</label>
-          <input type="email" email="true" class="form-control" formControlName="email">
+          <input type="email" email="true" class="form-control" formControlName="email"
+            [attr.disabled]="editButton==false?'':null">
         </div>
         <div class="form-group">
           <label for="contact">Contact Number:</label>
           <input type="text" myNumberOnly myNumberOnly class="form-control" formControlName="contact" minlength="10"
-            maxlength="10">
+            maxlength="10" [attr.disabled]="editButton==false?'':null">
         </div>
         <div class="form-group">
           <label for="dob">Date of birth:</label>
-          <input type="date" myNumberOnly class="form-control" formControlName="dob">
+          <input type="date" myNumberOnly class="form-control" formControlName="dob"
+            [attr.disabled]="editButton==false?'':null">
         </div>
         <div class="form-group">
           <label for="contact">School:</label>
-          <input type="text" class="form-control" formControlName="school">
+          <input type="text" class="form-control" formControlName="school" [attr.disabled]="editButton==false?'':null">
         </div>
         <div class="form-group">
           <label for="contact">College:</label>
-          <input type="text" class="form-control" formControlName="college">
+          <input type="text" class="form-control" formControlName="college" [attr.disabled]="editButton==false?'':null">
         </div>
         <div class="form-group">
           <label for="contact">Branch:</label>
-          <input type="text" class="form-control" formControlName="branch">
+          <input type="text" class="form-control" formControlName="branch" [attr.disabled]="editButton==false?'':null">
         </div>
         <!-- <div style="width: 100%; text-align: end;" *ngIf="showEdit">
           <button type="submit" class="btn btn-primary">Edit</button>
@@ -132,11 +134,13 @@
         </span>
         <div class="form-group">
           <label for="miniprojecttitle">Project Title:</label>
-          <input type="text" class="form-control" formControlName="miniProjectTitle">
+          <input type="text" class="form-control" formControlName="miniProjectTitle"
+            [attr.disabled]="editButton==false?'':null">
         </div>
         <div class="form-group">
           <label for="miniprojectdescription">Project Description:</label>
-          <input type="text" class="form-control" formControlName="miniProjectDescription">
+          <input type="text" class="form-control" formControlName="miniProjectDescription"
+            [attr.disabled]="editButton==false?'':null">
         </div>
       </div>
       <div class="col-sm-12">
@@ -145,11 +149,13 @@
         </span>
         <div class="form-group">
           <label for="majorprojecttitle">Project Title:</label>
-          <input type="text" class="form-control" formControlName="majorProjecTtitle">
+          <input type="text" class="form-control" formControlName="majorProjecTtitle"
+            [attr.disabled]="editButton==false?'':null">
         </div>
         <div class="form-group">
           <label for="majorprojectdescription">Project Description:</label>
-          <input type="text" class="form-control" formControlName="majorProjectDescription">
+          <input type="text" class="form-control" formControlName="majorProjectDescription"
+            [attr.disabled]="editButton==false?'':null">
         </div>
         <!-- <div style="width: 100%; text-align: end;" *ngIf="showEdit">
           <button type="submit" class="btn btn-primary">Edit</button>
@@ -169,28 +175,31 @@
           <label for="majorprojectdescription"> Have you done any Internship?</label><br />
           <label class="form-check-label" style="padding-left: 2%">
             <input class="form-check-input radio-inline" type="radio" name="gridRadios" id="gridRadios1" value="option1"
-              (click)="showinternship()">
+              (click)="showinternship()" [attr.disabled]="editButton==false?'':null">
             Yes</label>
           <label class="form-check-label" style="padding-left: 4%">
             <input class="form-check-input radio-inline" type="radio" name="gridRadios" id="gridRadios2" value="option2"
-              (click)="nointernship()">
+              (click)="nointernship()" [attr.disabled]="editButton==false?'':null">
             No</label>
         </div>
 
         <div class="form-group">
           <label for="majorprojectdescription">Role:</label>
-          <input type="text" class="form-control" formControlName="internRole">
+          <input type="text" class="form-control" formControlName="internRole"
+            [attr.disabled]="editButton==false?'':null">
         </div>
         <div class="form-group">
           <label for="majorprojectdescription">Company:</label>
-          <input type="text" class="form-control" formControlName="internCompany">
+          <input type="text" class="form-control" formControlName="internCompany"
+            [attr.disabled]="editButton==false?'':null">
         </div>
         <label for="majorprojectdescription">Duration:</label>
         <div class="row">
 
           <div class="col-md-4">
             <div class="form-group">
-              <input type="date" myNumberOnly class="form-control" formControlName="internDurationFrom">
+              <input type="date" myNumberOnly class="form-control" formControlName="internDurationFrom"
+                [attr.disabled]="editButton==false?'':null">
             </div>
 
           </div>
@@ -199,7 +208,8 @@
           </div>
           <div class="col-md-4">
             <div class="form-group">
-              <input type="date" myNumberOnly class="form-control" formControlName="internDurationTo">
+              <input type="date" myNumberOnly class="form-control" formControlName="internDurationTo"
+                [attr.disabled]="editButton==false?'':null">
             </div>
           </div>
         </div>
@@ -214,7 +224,7 @@
         <div class="form-group" *ngIf="showEdit">
           <label for="majorprojectdescription">Upload any Certification:</label>
           <input type="file" class="form-control" style="border: none" (change)="readUrl($event,'intern')"
-            formControlName="internCerftification">
+            formControlName="internCerftification" [attr.disabled]="editButton==false?'':null">
         </div>
         <div class="form-group" *ngIf="showEdit">
 
@@ -246,11 +256,12 @@
 
         <div class="form-group">
           <label for="majorprojectdescription">Skills:</label>
-          <input type="text" class="form-control" formControlName="skills">
+          <input type="text" class="form-control" formControlName="skills" [attr.disabled]="editButton==false?'':null">
         </div>
         <div class="form-group">
           <label for="majorprojectdescription">Description:</label>
-          <input type="text" class="form-control" formControlName="skillDescription">
+          <input type="text" class="form-control" formControlName="skillDescription"
+            [attr.disabled]="editButton==false?'':null">
         </div>
         <!-- <div style="width: 100%; text-align: end;" *ngIf="showEdit">
           <button type="submit" class="btn btn-primary">Edit</button>
@@ -270,18 +281,21 @@
 
         <div class="form-group">
           <label for="majorprojectdescription">Role:</label>
-          <input type="text" class="form-control" formControlName="trainingRole">
+          <input type="text" class="form-control" formControlName="trainingRole"
+            [attr.disabled]="editButton==false?'':null">
         </div>
         <div class="form-group">
           <label for="majorprojectdescription">Company:</label>
-          <input type="text" class="form-control" formControlName="trainingCompany">
+          <input type="text" class="form-control" formControlName="trainingCompany"
+            [attr.disabled]="editButton==false?'':null">
         </div>
         <label for="majorprojectdescription">Duration:</label>
         <div class="row">
 
           <div class="col-md-4">
             <div class="form-group">
-              <input type="date" myNumberOnly class="form-control" formControlName="trainingDurationFrom">
+              <input type="date" myNumberOnly class="form-control" formControlName="trainingDurationFrom"
+                [attr.disabled]="editButton==false?'':null">
             </div>
 
           </div>
@@ -290,7 +304,8 @@
           </div>
           <div class="col-md-4">
             <div class="form-group">
-              <input type="date" myNumberOnly class="form-control" formControlName="trainingDurationTo">
+              <input type="date" myNumberOnly class="form-control" formControlName="trainingDurationTo"
+                [attr.disabled]="editButton==false?'':null">
             </div>
           </div>
         </div>
@@ -303,7 +318,7 @@
         <div class="form-group">
           <label for="majorprojectdescription">Any other Certificate:</label>
           <input type="file" class="form-control" style="border: none" (change)="readUrl($event,'training')"
-            formControlName="trainingCertification">
+            formControlName="trainingCertification" [attr.disabled]="editButton==false?'':null">
         </div>
 
 
