--- a/src/app/tech-bank/tech-bank.component.html
+++ b/src/app/tech-bank/tech-bank.component.html
@@ -273,7 +273,7 @@
                 <br />
                 <b>Tech Teach Topic</b> : {{selectedTechTeach.topic}}
                 <br />
-                <b>Abstract</b> : {{selectedTechTeach.abstract}}
+                <b>Abstract</b> : <p class="ovrflw_h">{{selectedTechTeach.abstract}}</p>
                 <br />
                 <b>Speaker Details</b> : {{selectedTechTeach.expert_name}}
                 <br />
