--- a/src/styles.css
+++ b/src/styles.css
@@ -376,6 +376,11 @@ width: 85%;
 .red{
     color: red;
 }
+
+.ovrflw_h{
+    overflow: hidden;
+}
+
       /***************mediaquaries*********/
 @media screen and (min-width:120px)and (max-width:319px) {}
 
